# image-generation

./: .gitattributes  .gitignore  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  batch_blog_images.json  batch_blog_images_v2.json  batch_session_storage.json  generate.py  generate_blog_images.sh  image-generation-improvements.md  performance-optimization.md  requirements-dev.txt  requirements.txt  ruff.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: morpheus.md  neo.md  scribe.md  trinity.md
.github/workflows/: test-mermaid-diagrams.yml  tests.yml
.squad/: ceremonies.md  decisions.md  now.md  routing.md  team.md
.squad/casting/: history.json  policy.json  registry.json
.squad/decisions/: decisions.md
.squad/identity/: now.md
.squad/log/: 2026-03-23T23-10-35Z-memory-audit-and-fixes.md  2026-03-24T13-57-55Z-pr2-merge.md  2026-04-18T200512-joel-test-assessment.md  2026-04-18T201027-joel-test-implementation.md  2026-04-18T220900-pr15-review.md  2026-04-18T221300-pr15-blocker-fixes.md  2026-04-18T222000-pr15-re-review.md  2026-04-19T061711-pr65-lazy-imports.md  2026-04-19T095112-repo-restructure.md  2026-04-21-image-support-implementation.md  (+15 more)
docs/: README.md  blog-image-generation-skill.md  design.md  feature-specification.md  security.md
image-generation/: CONTRIBUTING.md  Makefile  README-redact-text.md  README.md  _write_tests.py  batch_blog_images.json  batch_blog_images_v2.json  batch_from_autocomplete_to_ai_team.json  batch_state_of_ai_survey.json  batch_you_have_a_team.json  characters.json  consistency.py  create_test_images.py  demo_redaction.py  expressions.json  generate.py  generate_blog_images.sh  loras.json  loras.schema.json  presets.py  profiles.json  pyproject.toml  pytest.ini  redact_text.py  requirements-dev.txt  requirements.txt  scenes.json  simple_config.py
manim-animation/: .gitignore  README.md  pyproject.toml  requirements.txt
manim-animation/docs/: limitations-and-roadmap.md  plan-sound-effects.md  troubleshooting.md
manim-animation/manim_gen/: __init__.py  audio_handler.py  cli.py  config.py  demo_template.py  errors.py  image_handler.py  llm_client.py  renderer.py  scene_builder.py
manim-animation/tests/: conftest.py  test_audio_cli.py  test_audio_handler.py  test_audio_security.py  test_cli.py  test_config.py  test_demo_bypass.py  test_image_cli.py  test_image_handler.py  test_image_security.py  test_integration.py  test_llm_client.py  test_renderer.py  test_scene_builder.py
mermaid-diagrams/: Makefile  README.md  pyproject.toml  requirements.txt
mermaid-diagrams/mermaidgen/: __init__.py  cli.py  config.py  errors.py  generator.py  templates.py  validators.py
mermaid-diagrams/tests/: conftest.py  test_cli.py  test_generator.py  test_templates.py  test_validators.py
mermaid-diagrams/tests/fixtures/: invalid_mermaid.mmd  valid_flowchart.mmd  valid_sequence.mmd
prompts/: examples.md
recording-toolkit/: README.md  recording-config.json  requirements.txt
recordings/: .gitignore
remotion-animation/: .gitignore  BUILD_SUMMARY.txt  README.md  generate_theorem.py  pyproject.toml
remotion-animation/docs/: plan-full-audio.md  test_root_props.md
remotion-animation/remotion-project/: package.json  tsconfig.json
remotion-animation/remotion-project/src/: GeneratedScene.tsx  Root.tsx
remotion-animation/remotion-project/src/templates/: ShapeRotate.tsx  TextFade.tsx
remotion-animation/remotion_gen/: __init__.py  audio_handler.py  cli.py  component_builder.py  config.py  demo_template.py  errors.py  image_handler.py  llm_client.py  renderer.py  tts_providers.py
remotion-animation/tests/: __init__.py  conftest.py  test_audio_cli_integration.py  test_audio_handler.py  test_audio_security.py  test_cli.py  test_component_builder.py  test_config.py  test_demo_template.py  test_image_cli.py  test_image_handler.py  test_image_security.py  test_integration.py  test_llm_client.py  test_renderer.py  test_tts_providers.py
scripts/: create-azure-openai-dalle.ps1  create-azure-openai-dalle.sh
story-to-video/: .coverage  README.md  coverage.json  pyproject.toml  requirements-dev.txt  requirements.txt
story-to-video/examples/: sample_story.txt
story-to-video/outputs/: test_3scenes.json  test_css_scenes.json  test_simple_scenes.json
story-to-video/outputs/runs/2026-05-06_153240/: scenes.json
story-to-video/outputs/runs/2026-05-06_153518/: scenes.json
story-to-video/outputs/runs/2026-05-06_154635/: manifest.json  scenes.json
story-to-video/outputs/runs/2026-05-06_155638/: manifest.json
story-to-video/outputs/runs/2026-05-06_160240/: manifest.json
story-to-video/outputs/runs/2026-05-06_160512/: manifest.json
story-to-video/outputs/runs/2026-05-06_170921/: manifest.json  playlist.yaml
story-to-video/outputs/runs/2026-05-06_184932/: scenes.json
story-to-video/prompts/: scene_planning.md
story-to-video/story-video-outputs/runs/2026-05-07_054142/: story.txt
story-to-video/story_video/: __init__.py  cli.py  config.py  doctor.py  models.py  playlist_builder.py  scene_planner.py  scene_renderer.py  tool_locator.py
story-to-video/story_video/image_generators/: __init__.py  azure_dalle.py  base.py  factory.py  local_sdxl.py
story-to-video/story_video/renderers/: __init__.py  base.py  image_renderer.py  manim_renderer.py  remotion_renderer.py
story-to-video/tests/: test_e2e.py  test_fixes.py  test_intelligent_routing.py  test_models.py
tests/: conftest.py  test_batch_cli.py  test_batch_generation.py  test_bug_fixes.py  test_cli_validation.py  test_coverage_gaps.py  test_input_validation.py  test_memory_cleanup.py  test_negative_prompt.py  test_oom_handling.py  test_oom_retry.py  test_pipeline_enhancements.py  test_scheduler.py  test_security.py  test_unit_functions.py
video-stitcher/: .gitignore  README.md  pyproject.toml
video-stitcher/stitch_video/: __init__.py  cli.py  config.py  errors.py  playlist.py  stitcher.py
video-stitcher/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_playlist.py  test_stitcher.py
(+220 files in other folders)
