[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mermaid-diagrams"
version = "0.1.0"
description = "Generate Mermaid diagrams from text prompts and render to PNG/SVG"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = []

[project.scripts]
mermaid-diagram = "mermaidgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
